--- a/style.css
+++ b/style.css
@@ -19,17 +19,17 @@ body {
 .game-container {
     margin: auto;
     padding: 2rem;
-    max-width: 18.75rem;
+    max-width: 37.5rem;
     background-color: white;
     border-radius: 0.625rem;
     box-shadow: 0 0.25rem 0.75rem rgba(0, 0, 0, 0.1);
-    border: 0.125rem solid red;
 }
 
 .game-title {
     text-align: center;
-    margin-bottom: 1.5rem;
-    color: #18BDA5;
+    margin-bottom: 1rem;
+    color: black;
+    font-weight: 500;
 }
 
 .game-instructions {
@@ -40,16 +40,30 @@ body {
 
 .guess-form {
     display: flex;
-    justify-content: center;
+    flex-direction: row;
+    justify-content: start;
     align-items: center;
     flex-wrap: wrap;
     gap: 0.5rem;
     margin-bottom: 1.5rem;
 }
 
+
 .guess-input {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
     flex: 1;
     min-width: 12.5rem;
+}
+
+.guess-form submit-button {
+    border: none;
+    padding: 0.75rem 1rem 0.75rem 1rem;
+    border-radius: 0.75rem;
+    background-color: #9b6dff;
+    color: white;
+    cursor: pointer;
 }
 
 .message-area {
